--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ security.oauth2.client.registered-redirect-uri= http://127.0.0.1:8080/user
 
 security.oauth2.resource.userInfoUri  =  https://www.googleapis.com/userinfo/v2/me
 security.oauth2.resource.preferTokenInfo = false
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:8181/testuser
+spring.datasource.username=root
+spring.datasource.password=root
+spring.main.allow-bean-definition-overriding=true
