keycloack auth and fix some stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,9 @@ keycloak.credentials.secret = 3a981e1b-2937-4527-8341-56515bd6f991
 
 # Keycloak Enable CORS
 keycloak.cors = true
-keycloak.security-constraints[0].securityCollections[0].patterns[0]=/products/*
+#keycloak.security-constraints[0].securityCollections[0].patterns[0]=/products/*
+#keycloak.security-constraints[0].authRoles[0]=guest
+#keycloak.security-constraints[0].securityCollections[0].patterns[0]=/users/*
+
+#keycloak.security-constraints[1].authRoles[0]=devoteam
+#keycloak.security-constraints[1].securityCollections[0].patterns[0]=/entities/*
